<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <TextView
        android:id="@+id/texempresax"

        android:layout_width="136dp"
        android:layout_height="35dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:background="@drawable/textview_border"
        android:fontFamily="@font/ariblk"
        android:gravity="center"
        android:text="@string/apk"
        android:textSize="20sp"
        android:textStyle="bold"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <ImageView
        android:id="@+id/logoprincipal"

        android:layout_width="309dp"
        android:layout_height="317dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:src="@mipmap/ic_launcher_foreground"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <Button
        android:id="@+id/horasextras"

        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:background="@drawable/cambiocolorgeneral"
        android:text="@string/botonmas"
        android:gravity="center"
        android:textSize="29sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

    <TextView
        android:id="@+id/horasextrastex"

        android:layout_width="86dp"
        android:layout_height="23dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:fontFamily="@font/arial"
        android:text="@string/horasextrastexto"
        android:textStyle="bold"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <Button
        android:id="@+id/asistencia"

        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:background="@drawable/cambiocolorgeneral"
        android:text="@string/botonmas"
        android:gravity="center"
        android:textSize="29sp"

        app:cornerRadius="100dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/asistenciatex"

        android:layout_width="67dp"
        android:layout_height="22dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:fontFamily="@font/arial"
        android:text="@string/asistenciatexto"
        android:textStyle="bold"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <Button
        android:id="@+id/incapacidad"

        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:background="@drawable/cambiocolorgeneral"
        android:text="@string/botonmas"
        app:cornerRadius="100dp"
        android:gravity="center"
        android:textSize="29sp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

    <TextView
        android:id="@+id/incapacidadtex"

        android:layout_width="82dp"
        android:layout_height="19dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:fontFamily="@font/arial"
        android:text="@string/incapacidadtexto"
        android:textStyle="bold"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.539" />

    <Button
        android:id="@+id/inventario"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:fontFamily="@font/ariblk"
        android:background="@drawable/cambiocolorgeneral"
        android:text="@string/inventariotexto"
        app:cornerRadius="100dp"
        android:textStyle="bold"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712" />

    <Button
        android:id="@+id/nuevousuario"

        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:fontFamily="@font/ariblk"
        android:background="@drawable/cambiocolorgeneral"
        android:text="@string/nuevousuariotexto"
        android:textStyle="bold"
        android:gravity="center"

        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.825" />

    <Button
        android:id="@+id/borrarempleado"

        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:fontFamily="@font/ariblk"
        android:background="@drawable/cambiocolorgeneral"
        android:text="@string/borrarempleadotexto"
        app:cornerRadius="100dp"
        android:textStyle="bold"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <Button
        android:id="@+id/logout"

        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:fontFamily="@font/ariblk"
        android:background="@drawable/cambiarcolorlogout"
        android:drawableRight="@drawable/ic_logout"
        android:paddingStart="2sp"
        android:paddingEnd="2dp"
        android:text="@string/logout"
        android:textSize="11sp"
        android:textStyle="bold"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127"/>


</androidx.constraintlayout.widget.ConstraintLayout>