<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="386dp"
        android:layout_height="621dp"


        android:layout_marginTop="@dimen/margin_standard"


        android:background="@drawable/colorescalonado"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"


        >

    </RelativeLayout>

    <TextView
        android:id="@+id/text_registro_empleado"

        android:layout_width="291dp"
        android:layout_height="55dp"

        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:padding="11dp"
        android:text="@string/otra_pantalla"
        android:textSize="25sp"
        android:fontFamily="@font/arial"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#000000"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146"

        />


    <EditText

        android:id="@+id/usuario"

        android:layout_width="262dp"
        android:layout_height="50dp"

        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:hint="@string/ing_usuario"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/arial"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369" />

    <EditText
        android:id="@+id/password"

        android:layout_width="261dp"
        android:layout_height="53dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:hint="@string/ing_password"
        android:textSize="16sp"
        android:textStyle="bold"
        android:ems="10"
        android:inputType="textPassword"
        android:fontFamily="@font/arial"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463"/>


    <EditText
        android:id="@+id/correo"

        android:layout_width="261dp"
        android:layout_height="53dp"

        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:ems="10"
        android:fontFamily="@font/arial"
        android:hint="@string/ing_email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

    <Button
        android:id="@+id/aceptar"

        android:layout_width="115dp"
        android:layout_height="48dp"

        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:background="@drawable/cambiocolorgeneral"
        android:text="@string/bott_aceptar"
        android:textSize="16sp"
        android:fontFamily="@font/arial"
        android:textStyle="bold"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.889" />


    <Button
        android:id="@+id/canselar"

        android:layout_width="115dp"
        android:layout_height="48dp"

        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:background="@drawable/cambiocolorgeneral"
        android:fontFamily="@font/arial"
        android:text="@string/bott_cancel"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.889" />

    <!--Button
        android:id="@+id/myButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:text="Mi Botón"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676" /-->




</androidx.constraintlayout.widget.ConstraintLayout>