<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:theme="@style/AppTheme">

    <TextView
        android:id="@+id/iniciosesion"

        android:layout_width="245dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:background="@drawable/textview_border"
        android:fontFamily="@font/ariblk"
        android:gravity="center"
        android:text="@string/text_inisio_seccion"
        android:textSize="20sp"
        android:textStyle="bold"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />


    <View
        android:id="@+id/view"
        android:layout_width="43dp"
        android:layout_height="58dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:background="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153"
        app:srcCompat="@drawable/ic_user" />


    <TextView
        android:id="@+id/texempresasxfd"
        android:layout_width="245dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"


        android:fontFamily="@font/ariblk"
        android:gravity="center"
        android:text="@string/text_administrativo"
        android:textSize="20sp"
        android:textStyle="bold"


        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="25dp"



        app:hintTextColor="@color/color_negro"
        android:hint="usuario"
        app:boxStrokeColor="@color/color_negro"
        android:textColorHint="@color/color_negro"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:startIconDrawable="@drawable/ic_user"
        app:helperText="@string/text_alvertencia"
        app:helperTextEnabled="true"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"



        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"



            />





    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="320dp"
            android:layout_marginEnd="25dp"



            app:hintTextColor="@color/color_negro"
            android:inputType="textPassword"
            android:hint="contraseña"
            app:boxStrokeColor="@color/color_negro"
            android:textColorHint="@color/color_negro"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:startIconDrawable="@drawable/ic_password"
            app:helperText="@string/text_alvertencia"
            app:helperTextEnabled="true"
            app:endIconMode="password_toggle"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"


            >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"



        />
    </com.google.android.material.textfield.TextInputLayout>















    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"


        android:background="@color/color_trasparente"
        android:text="@string/text_olvide"
        android:textColor="@color/color_negro"
        android:textAllCaps="false"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.660" />

    <Button
        android:id="@+id/iniciar_secion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:background="@drawable/cambiocolorgeneral"
        android:text="@string/bott_inisio_sesion"
        android:textColor="@color/color_negro"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/registro"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"

        android:background="@drawable/cambiocolorgeneral"
        android:text="@string/bott_registrarme"
        android:textColor="@color/color_negro"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />



</androidx.constraintlayout.widget.ConstraintLayout>